[gd_scene load_steps=12 format=3 uid="uid://dmaqlc81kw7f8"]

[ext_resource type="Script" uid="uid://jtib34n3mmky" path="res://mode/battle/battle_mode.gd" id="1_0beij"]
[ext_resource type="PackedScene" uid="uid://b1umt3mgf2ylg" path="res://grid/grid.tscn" id="2_oquoe"]
[ext_resource type="PackedScene" uid="uid://pkpl54rmgns7" path="res://ui/title/title.tscn" id="3_sr6g4"]
[ext_resource type="Texture2D" uid="uid://bk1rgby8bl2hr" path="res://mode/battle/FirstStepIcon.png" id="4_5vs8v"]
[ext_resource type="PackedScene" uid="uid://b128myar7a7y1" path="res://ui/cell_details_panel/cell_details_panel.tscn" id="4_lwemp"]
[ext_resource type="Texture2D" uid="uid://ddywix2exwiqj" path="res://mode/battle/PreviousStepIcon.png" id="5_xj52t"]
[ext_resource type="Texture2D" uid="uid://cq7wxo0lrln85" path="res://mode/battle/RunIcon.png" id="6_7x38h"]
[ext_resource type="Texture2D" uid="uid://clddh03pvcxm" path="res://mode/battle/PauseIcon.png" id="7_wamvc"]
[ext_resource type="Texture2D" uid="uid://bpyahsp2glp5p" path="res://mode/battle/NextStepIcon.png" id="8_xrd0l"]
[ext_resource type="Texture2D" uid="uid://bjgdddepwt02c" path="res://mode/battle/LastStepIcon.png" id="9_wrnxh"]

[sub_resource type="Curve" id="Curve_0beij"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="BattleMode" type="Node"]
script = ExtResource("1_0beij")
_run_speed_curve = SubResource("Curve_0beij")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PanelContainer1" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="HBoxContainer/PanelContainer1"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/PanelContainer1/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(842, 640)
render_target_update_mode = 4

[node name="Grid" parent="HBoxContainer/PanelContainer1/SubViewportContainer/SubViewport" instance=ExtResource("2_oquoe")]
unique_name_in_owner = true

[node name="CameraControl" parent="HBoxContainer/PanelContainer1/SubViewportContainer/SubViewport/Grid/GridPlane" index="1"]
CfgRotateSpeed = 0.8

[node name="OverlayPanel" type="Panel" parent="HBoxContainer/PanelContainer1"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"OverlayPanelOuter"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/PanelContainer1/OverlayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="OverlayLabel" type="Label" parent="HBoxContainer/PanelContainer1/OverlayPanel/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"OverlayLabel"
text = "Loading..."

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="GameTitle" parent="HBoxContainer/PanelContainer2/VBoxContainer" instance=ExtResource("3_sr6g4")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="PlayerControlPanel" type="PanelContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"DetailPanel"

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel"]
layout_mode = 2

[node name="VBoxContiner" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer"]
layout_mode = 2

[node name="FirstStepButton" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Go to first step"
icon = ExtResource("4_5vs8v")
icon_alignment = 1
expand_icon = true

[node name="PreviousStepButton" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Go to previous step"
icon = ExtResource("5_xj52t")
icon_alignment = 1
expand_icon = true

[node name="RunButton" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Play from current step"
icon = ExtResource("6_7x38h")
icon_alignment = 1
expand_icon = true

[node name="PauseButton" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 5
tooltip_text = "Pause playing"
disabled = true
icon = ExtResource("7_wamvc")
icon_alignment = 1
expand_icon = true

[node name="NextStepButton" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 5
tooltip_text = "Go to next step"
icon = ExtResource("8_xrd0l")
icon_alignment = 1
expand_icon = true

[node name="LastStepButton" type="Button" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer/VBoxContiner"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 5
tooltip_text = "Go to last step"
icon = ExtResource("9_wrnxh")
icon_alignment = 1
expand_icon = true

[node name="CurrentStepSlider" type="HSlider" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Current step"
value = 20.0
rounded = true
ticks_on_borders = true

[node name="LoadProgressBar" type="ProgressBar" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PlayerControlPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Loading progress"
show_percentage = false

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"DetailPanel"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="CurrentStepLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Step"

[node name="CurrentStepValue" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "9999"
horizontal_alignment = 2

[node name="NumStepsLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Of"

[node name="NumStepsValue" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/HBoxContainer/PanelContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "9999"
horizontal_alignment = 2

[node name="SettingsPanel" type="PanelContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"DetailPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/SettingsPanel"]
layout_mode = 2

[node name="RunSpeedContainer" type="HBoxContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="RunSpeedLabel" type="Label" parent="HBoxContainer/PanelContainer2/VBoxContainer/SettingsPanel/VBoxContainer/RunSpeedContainer"]
layout_mode = 2
text = "Speed:"

[node name="RunSpeedSlider" type="HSlider" parent="HBoxContainer/PanelContainer2/VBoxContainer/SettingsPanel/VBoxContainer/RunSpeedContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
tooltip_text = "Speed of playback"
max_value = 1.0
step = 0.01
value = 0.5
ticks_on_borders = true

[node name="CellDetailContainer" type="PanelContainer" parent="HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DetailPanel"

[node name="CellDetailsPanel" parent="HBoxContainer/PanelContainer2/VBoxContainer/CellDetailContainer" instance=ExtResource("4_lwemp")]
unique_name_in_owner = true
layout_mode = 2

[editable path="HBoxContainer/PanelContainer1/SubViewportContainer/SubViewport/Grid"]
[editable path="HBoxContainer/PanelContainer1/SubViewportContainer/SubViewport/Grid/GridPlane/CameraControl"]
